# arinc653emulator

./: .travis.yml  CMakeLists.txt  F6ACM Development Process.htm  Instructions-for-generating-Extra-debug-info.txt  LICENSE  README-ACM.txt  README.md  bootstrap.sh  build.sh  cmake-instructions.txt  generateMakefiles.sh
ACM-src/: ACM-1.0.pc.in  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  DRACM.pc.in  Doxyfile.in  DoxyfileARINCEmulator  DoxyfileUser.in  DoxyfileUsercmake.in  Doxyfilecmake.in  INSTALLACM.sh  Makefile.am  NEWS  README  configure.ac
ACM-src/ACE_CONFIG_FILES/: ace_config.h  default.features  platform_macros.GNU  set_doc_root.sh
ACM-src/MPC/config/: acm.mpb  acm_idl.mpb  acm_project_defaults.mpb  acm_statemachine.mpb  acmbase.mpb  acminstall.mpb
ACM-src/ModuleManager/: CMakeLists.txt  Makefile.am  ModuleConfigurationDefinitions.cc  ModuleInitialization.cc  ModuleManager.cc  ModuleManagerExternal.cc  ModuleManagerMain.cc  ModulePartitionCreation.cc  ModuleScheduler.cc  ModuleSignalHandlers.cc  MultiModuleRelatedConfig.cc  NetworkPartition.cc  WithDiscovery.cfg  WithPortConfigExample.txt  file.cfg
ACM-src/ModuleManager/MoreExamplesOfConfigurationFiles/: Module0_Config.txt  Module1_Config.txt  Module2_Config.txt  MultiChannelEx.txt  MultiChannelExSampling.txt
ACM-src/NetworkPartition/: CMakeLists.txt  Makefile.am
ACM-src/StateMachine/: CMakeLists.txt  Makefile.am
ACM-src/StateMachine/src/StateMachine/: ReadMe.txt  StateMachine.cpp  StateMachine.sln  StateMachine.vcproj  globals.cpp
ACM-src/StateMachine/src/Test1/: Test1.cpp  Test1.vcproj
ACM-src/arincdemo/: Makefile.am  README  configure.ac
ACM-src/arincdemo/single_partition_ex/: Makefile.am
ACM-src/arincdemo/single_partition_ex/blackboard_use/: Configuration.cfg  Makefile.am  Readme.txt  testBlackboard.cc
ACM-src/arincdemo/single_partition_ex/buffer_use/: Configuration.cfg  Makefile.am  Readme.txt  testBuffer.cc
ACM-src/arincdemo/single_partition_ex/event_use/: Configuration.cfg  Makefile.am  Readme.txt  testEvent.cc
ACM-src/arincdemo/single_partition_ex/periodic_wait_use/: Configuration.cfg  testProcessServices.cc
ACM-src/arincdemo/single_partition_ex/process_management_use/: Makefile.am  Readme.txt  testProcessServices.cc
ACM-src/arincdemo/single_partition_ex/sempahore_use/: Configuration.cfg  Makefile.am  Readme.txt  testSemaphoreServices.cc
ACM-src/arincdemo/three_partition_ex/queueing_port_use/: Configuration.txt  Makefile.am  partition1.cc  partition2.cc  partition3.cc
ACM-src/arincdemo/three_partition_ex/sampling_port_use/: Configuration.txt  Readme.txt  partition1.cc  partition2.cc  partition3.cc
ACM-src/arincdemo/two_partition_ex/: Makefile.am
ACM-src/arincdemo/two_partition_ex/queueing_port_use/: Configuration.txt  Makefile.am  Readme.txt  partition1.cc  partition2.cc
ACM-src/arincdemo/two_partition_ex/sampling_port_use/: Configuration.txt  Readme.txt  partition1.cc  partition2.cc
ACM-src/docs/: CMakeLists.txt  Makefile.am  apex_mbshm_type.idl  apex_mbshm_user.idl  mainpage.h
ACM-src/include/: config.h.in
ACM-src/include/ACM/INTERNAL/: ACM_INTERNAL_INCLUDE.h  ACM_THREAD_SUPPORT.h  APEX.h  BLACKBOARD.h  BUFFER.h  EVENT.h  ModuleManager.h  NetworkPartition.h  PROCESS.h  QUEUE_CHANNEL.h  QUEUE_PORT.h  SAMPLING_CHANNEL.h  SAMPLING_PORT.h  UDPSocket.h
ACM-src/include/ACM/USER/: ACM_APEX_EXTENSIONS.h  ACM_COMPONENT.h  ACM_EXCEPTION.h  ACM_HM_TYPES.h  ACM_IDL_HELPER.h  ACM_IDL_TYPES.idl  ACM_LOGGER.h  ACM_STATE_VARIABLE_HELPER.h  ACM_TIMER.h  ACM_USER_INCLUDE.h.in  ACM_UTILITIES.h  APEX_INTERFACE.h  APEX_TYPES.h  EVENT_PORT.h
ACM-src/include/StateMachine/: StateMachine.h  globals.h
ACM-src/src/: ACM_LOGGER.cc  ACM_THREAD_SUPPORT.cc  ACM_TIMER.cc  APEX.cc  APEX_BLACKBOARD_SERVICES.cc  APEX_BUFFER_SERVICES.cc  APEX_EVENT_SERVICES.cc  APEX_HM_SERVICES.cc  APEX_INTERFACE_IMPL.cc  APEX_PROCESS_SERVICES.cc  APEX_QUEUING_SERVICES.cc  APEX_SAMPLING_SERVICES.cc  APEX_SCHEDULING.cc  APEX_SEMAPHORE_SERVICES.cc  APEX_TIME_MANAGEMENT_SERVICES.cc  BLACKBOARD.cc  BUFFER.cc  CMakeLists.txt  EVENT.cc  EVENT_PORT.cc  Makefile.am  PROCESS.cc  QUEUE_CHANNEL.cc  QUEUE_PORT-ACM-17.cc  QUEUE_PORT.cc  SAMPLING_CHANNEL.cc  SAMPLING_PORT.cc  UDPSocket.cpp  run_tao_idl.cmake
ACM-src/test/: Makefile.am
ACM-src/test/FunctionalityTest/: Makefile.am  runTest.sh  testBlackBoard.cc  testBuffer.cc  testBuffer2.cc  testEventPort_BlackBoard.cc  testEventPort_buffer.cc  testEventPort_queuing_dst.cc  testEventPort_queuing_src.cc  testHM.cc  testLoadSystem.cc  testQ.cc  testRWLOCK.cc  testReplenish.cc  testSchedulerServices.cc  testSemaphore.cc  testSuspendResume.cc  testTimer.cc  test_queue_intermodule_dst.cc  test_queue_intermodule_src.cc  test_sampling_interModule_dst.cc  test_sampling_interModule_src.cc  test_sampling_port_channel.cc  test_sampling_port_data_buffer.cc
ACM-src/test/InterfaceReturnCodeTests/: Makefile.am  clearBlackboardTest.cc  common.h  createBlackboardTest.cc  createBufferTest.cc  createEventTest.cc  createProcessTest.cc  createSemaphoreTest.cc  delayedStartTest.cc  displayBlackboardTest.cc  getBlackboardIDTest.cc  getBlackboardStatusTest.cc  getBufferIDTest.cc  getBufferStatusTest.cc  getEventIDTest.cc  getEventStatusTest.cc  getIDTest.cc  getMyIDTest.cc  getPartitionStatusTest.cc  getSemaphoreIDTest.cc  getSemaphoreStatusTest.cc  getStatusTest.cc  readBlackboardTest.cc  receiveBufferTest.cc  resetEventTest.cc  resumeTest.cc  sendBufferTest.cc  setEventTest.cc  setPartitionModeTest.cc  setPriorityTest.cc  signalSemaphoreTest.cc  startTest.cc  stopSelfTest.cc  stopTest.cc  suspendSelfTest.cc  suspendTest.cc  testEvent3.cc  waitEventTest.cc  waitSemaphoreTest.cc
ACM-src/utilityscripts/: CalculateDrift.py  LoadAndPlotTrace.py  TraceActivity.py  TraceActivityAll.py  log_parser.py
F6ACM Development Process_files/: filelist.xml  item0001.xml  props002.xml
